
plugins {
    id 'java-library'
}

sourceCompatibility = 14
targetCompatibility = 14

java {
    withSourcesJar()
    withJavadocJar()
    modularity.getInferModulePath() set true
}

sourceSets {
    main {
        output.resourcesDir = file('build/bin')
        java.outputDir = file('build/bin')
    }
}

dependencies {
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4jVersion
    implementation group: 'com.electronwill.night-config', name: 'core', version: nightconfigVersion
    implementation group: 'com.electronwill.night-config', name: 'toml', version: nightconfigVersion
}
